--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,11 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/app/_shared/styles/variables.css",
+              "src/app/_shared/styles/custom.css",
+              "src/app/_shared/styles/images.css",
+              "src/app/material/angular-material.css",
               "src/styles.css"
             ],
             "scripts": [],
@@ -89,6 +94,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
