--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,9 @@
   functions = "netlify/functions"
   publish = "public"
 
+[functions]
+        node_bundler = "esbuild"
+        
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
   #[[redirects]]
@@ -19,3 +22,4 @@
   #  publish = "dist" # Folder with the static content for _redirect file
 
   ## more info on configuring this file: https://ntl.fyi/file-based-build-config
+
