--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "ng test",
     "serve:ssr:gfi-landing": "node dist/gfi-landing/server/server.mjs"
   },
+  "type": "module",
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
@@ -23,6 +24,7 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.8",
+    "@vercel/node": "^3.2.29",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "lucide-angular": "^0.462.0",
@@ -36,7 +38,7 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@types/node": "^18.19.67",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
